[package]
name = "bitcoin-parser"
version = "0.1.0"
authors = ["Akagi201 <akagi201@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Akagi201/pwasm-libs"
homepage = "https://github.com/Akagi201/pwasm-libs"
documentation = "https://docs.rs/bitcoin-parser"
description = "Bitcoin block header parser"
keywords = ["wasm", "webassembly", "pwasm", "bitcoin", "parser"]
categories = ["no-std", "embedded"]

[dependencies]
arrayref = "~0.3"
byteorder = { version = "~1.2", default-features = false }
sha2 = "0.7.1"
